--- a/.gitignore
+++ b/.gitignore
@@ -45,4 +45,7 @@ __pycache__/
 # Azurite artifacts
 __blobstorage__
 __queuestorage__
-__azurite_db*__.jsonscratchpad.py
+__azurite_db*__.json
+
+# custom
+scratchpad.py
