--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,9 @@ google-auth-oauthlib
 google-auth
 azure-identity
 azure-keyvault-secrets
+openai
+google-auth
+google-auth-oauthlib
+google-auth-httplib2
+google-api-python-client
+azure-cosmos
